[project]
name = "Supply-Replenish"
title = "加单商品分配系统"
description = "跨平台的加单商品分配系统，支持Windows、macOS和Linux平台"
version = "2.6.2"
authors = [
    { name = "Author", email = "author@example.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
